<resources>
    <string name="app_name">Firebase_Project</string>

    <string name="Login">Login</string>
    <string name="Registrar">Registrar</string>

    <string name="contrase_a">Contraseña</string>
    <string name="iniciar">Iniciar</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="Cerrar">Cerrar sesión</string>

    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">id.User</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="limpiar_marcas">Limpiar Marcas</string>
    <string name="mi_favorito">Mi Favorito</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>