<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/fondo_menu2"
    android:gravity="bottom"
    android:orientation="vertical"
    app:headerLayout="@layout/nav_header_drawer"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:ignore="ResourceCycle">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:cardCornerRadius="80dp">
        <!--FOTO DE PERFIL-->
        <ImageView
            android:id="@+id/IMG"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/nav_header_desc"
            app:srcCompat="@mipmap/ic_launcher_round"/>
        !--FOTO DE PERFIL-->

    </androidx.cardview.widget.CardView>



    <TextView
        android:id="@+id/nav_header_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/nav_header_title"

        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/nav_header_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/correo" />
</LinearLayout>